# assrt-chinese-subtitle-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.en.md  README.md  docker-compose.yml  patch.py  patch_client.py  patch_client2.py  pyproject.toml
.github/workflows/: gitleaks.yml  pr.yml
src/: https_client.py  main.py  mcp_server.py
tests/: test_data.py  test_https_client.py  test_main.py  test_mcp_server.py
